GitOps/environments/dev/video/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: video-service
  namespace: video
spec:
  replicas: 2
  selector:
    matchLabels:
      app: video
  template:
    metadata:
      labels:
        app: video
    spec:
      containers:
        - name: video
          image: saotech/video-service:dd47578
          ports:
            - containerPort: 8000
          resources:
            requests:
              cpu: "50m"
              memory: "64Mi"
            limits:
              cpu: "200m"
              memory: "128Mi"
