GitOps/environments/dev/video/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: video-ingress
  namespace: video
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /api/video(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: video-service
            port:
              number: 80
